Popraw wydajność i dodaj fajerwerki
Nie dosłownie...

--- a/threejs_building.html
+++ b/threejs_building.html
@@ -24,5 +24,12 @@
 
 	<body>
 		<script type="module" src="./building.js"></script>
+		<div style="color:teal; font-family: sans-serif; font-weight: bold; background: #533; position: fixed; bottom: 0px; left: 0px; opacity: 0.9; z-index: 10000; padding:0.5em;margin:0;">
+			<p style="margin: 0">
+			Generacje są tworzone co 0.5 sekundy, żeby nie "przycinać" przeglądarki.<br>
+			spacja - utwórz jedną generację, Enter - 40 generacji<br>
+			q - przełącza cienie, 1-9 przełączają różne warstwy
+			</p>
+		</div>
 	</body>
 </html>
