--- a/threejs_building.html
+++ b/threejs_building.html
@@ -26,9 +26,10 @@
 		<script type="module" src="./building.js"></script>
 		<div style="color: hsl(0, 0%, 75%); font-family: sans-serif; font-weight: bold; background-color: hsl(242, 40%, 20%); position: fixed; bottom: 0px; left: 0px; opacity: 0.9; z-index: 10000; padding:0.5em;margin:0;">
 			<p style="margin: 0">
-			Generacje są tworzone co 0.5 sekundy, żeby nie "przycinać" przeglądarki.<br>
+			Generacje są tworzone co 0.5 sekundy, żeby nie "przycinać" przeglądarki na dłużej.<br>
 			spacja - utwórz jedną generację, Enter - 40 generacji<br>
-			q - przełącza cienie, 1-9 przełączają różne warstwy
+			q - przełącza cienie, 1-3 przełączają różne warstwy<br>
+			z - najmniejsze obciążenie grafiki: wyłączone cienie, włączona tylko warstwa 1
 			</p>
 		</div>
 	</body>
